codebird-php - changelog
========================

2.4.0 (not yet released)

2.3.6 (2013-05-12)
+ Add backslash to stdClass construction, due to namespace

2.3.5 (2013-04-30)
+ Fix fatal error:  Class 'Codebird\Exception' not found

2.3.4 (2013-04-28)
+ Fix namespace not properly cased

2.3.3 (2013-04-26)
+ Detect API error responses as XML, see #1
+ OAuth: add support for force_login, screen_name parameters, see #14
+ Add namespace

2.3.2 (2013-04-09)
+ Use protected keyword for methods that may be overriden in extended classes

2.3.1 (2013-03-23)
- Re-remove statuses/sample. It's streaming API, which Codebird doesn't currently support
+ Don't send multipart POST to non-multipart methods, fix issue #8
+ Remove auto-added backslashes from parsed API method parameters if magic quotes are on, fix #7

2.3.0 (2013-03-19)
+ Update README with info about how to get details of the current user
+ Clarify that the consumer secret and access token secret are not the same
+ Readme: Clarify authentication tokens
+ Add README section about rate-limiting
+ Add README section about cursored results
+ Add OAuth2 application-only auth
- Drop support for statuses/public_timeline
- Drop support for v1 API
+ add statuses/sample, friendships/no_retweets/ids methods
+ Add Changelog

2.2.3 (2012-12-03)
+ Fix wrong assignment operator in _detectMethod for multi HTTP method endpoints
+ Add documentation about $params in _detectMethod
+ Add new methods now available in 1.1
+ Add friends/list, followers/list API methods

2.2.2 (2012-10-17)
+ Add profile banner methods
+ Drop separate media upload method as noted at https://dev.twitter.com/docs/api/1.1/post/statuses/update_with_media
+ Fix wrong Exception
+ add support for old endpoints
+ Update endpoints to 1.1 endpoints

2.2.1 (2012-09-17)
+ Update to Twitter API 1.1

2.2.0 (2012-07-08)
+ Add support for users/profile_image/:screen_name
- drop support for string return format

2.1 (2012-07-07)
+ Add documentation in readme