@@ -2,6 +2,7 @@ codebird-php - changelog
 ========================
 
 2.4.0 (not yet released)
++ rfe #21 JSON return format
 
 2.3.6 (2013-05-12)
 + Add backslash to stdClass construction, due to namespace
